--- a/Application/AngularWithFireBase/src/app/components/orders/orders.component.html
+++ b/Application/AngularWithFireBase/src/app/components/orders/orders.component.html
@@ -1,1 +1,10 @@
-<p>orders works!</p>
+<form [formGroup]="this.form">
+    <input placeholder="Order Number" 
+           formControlName="orderNumber" 
+           type="text" 
+           class="input-field col s12">
+    <input placeholder="Customer Name" 
+           formControlName="customerName" 
+           type="text" 
+           class="input-field col s12">
+</form>
